players slider and coches

--- a/coaches.html
+++ b/coaches.html
@@ -165,7 +165,13 @@
       <div id="image"></div>
       
     </div>
-    <!-- - #FOOTER-->
+    <div class="players">    <ul class="player" ><li> <a href="Jurgen Klopp.html" class="btn"><h5>Jurgen klopp</h5></a></li>
+      <li><a href="carlo ancelotti.html" class="btn"><h5>Carlo</h5></a></li>
+      <li><a href="Pep Guardiola.html" class="btn"><h5>Guardiola</h5></a></li>
+      <li><a href="José Mourinho.html" class="btn"><h5>Jose Mourinho</h5></a></li>
+    </ul>
+  </div>
+    <!--#FOOTER-->
 
     <footer class="footer" style="width: 100% !important;
     margin-top: 40px;">
