--- a/players.html
+++ b/players.html
@@ -164,12 +164,13 @@
       </div>
       <div id="image"></div>
     </div>
-    <ul class="players" style="margin: auto;
-    display: inline;"><li> <a href="pedri.html" class="btn"><h5>pedri</h5></a></li>
+    <div class="players">    <ul class="player" ><li> <a href="pedri.html" class="btn"><h5>pedri</h5></a></li>
     <li><a href="gavi.html" class="btn"><h5>gavi</h5></a></li>
     <li><a href="leo.html" class="btn"><h5>leo</h5></a></li>
     <li><a href="kdb.html" class="btn"><h5>Kevin de Bruyne</h5></a></li>
   </ul>
+</div>
+
     <!-- - #FOOTER-->
 
     <footer class="footer" style="width: 100% !important;
