--- a/home.html
+++ b/home.html
@@ -141,7 +141,7 @@
 
             <div class="btn-wrapper">
 
-              <a href="#" class="btn btn-primary">login</a>
+              <a href="login.html" class="btn btn-primary">login</a>
 
               <a href="#" class="btn btn-outline">Contact Us</a>
 
