--- a/sign up.html
+++ b/sign up.html
@@ -140,7 +140,7 @@ button{
         <div class="shape"></div>
     </div>
     <form target="_blank" >
-        <h3>Sgin up</h3>
+        <h3>Sign up</h3>
 
         <label for="username" aria-required="">Username</label>
         <input type="text" placeholder="Email or Phone" required id="username">
