final edits inshallah

--- a/Shop.html
+++ b/Shop.html
@@ -178,7 +178,7 @@
         <div class="content2">
             <div class="card">
                 <div class="icon">
-                    <a href="#" > <img src="img/football player.png" alt=""></a>
+                    <a href="players.html" > <img src="img/football player.png" alt=""></a>
                 </div>
                 <div class="info">
                     <h3>Players</h3>
@@ -187,7 +187,7 @@
             </div>
             <div class="card">
                 <div class="icon">
-                    <a href="#" > <img src="img/clothes.png" alt=""></a>
+                    <a href="Sports supplies.html" > <img src="img/clothes.png" alt=""></a>
                 </div>
                 <div class="info">
                     <h3>Sports supplies</h3>
