--- a/login.html
+++ b/login.html
@@ -309,7 +309,7 @@ if (homeLink) {
     event.preventDefault();
     
     // Perform your desired action, such as navigating to the home page
-    window.location.href = "home.html";
+    window.location.href = "players.html";
   });
 }
 
