--- a/coaches.html
+++ b/coaches.html
@@ -293,7 +293,7 @@
     </footer>
     <!-- - custom js link-->
   <script src="./assets/js/script.js"></script>
-  <script src="./assets/js/sliders.js"></script>
+  <script src="./assets/js/sliderc.js"></script>
   <!-- - ionicon-->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
