--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@
         </a>
 
         <p class="footer-text">
-          &copy; 2022 codewithsadee. <br> All rights reserved.
+          &copy; 2024 Nain Dev. <br> All rights reserved.
         </p>
 
         <ul class="social-list">
