contact us page

--- a/home.html
+++ b/home.html
@@ -70,7 +70,7 @@
             <a href="coaches.html" class="navbar-link">coaches</a>
           </li>
           <li>
-            <a href="#" class="navbar-link">Contact</a>
+            <a href="contact-us.html" class="navbar-link">Contact</a>
           </li>
         </ul>
 
