--- a/Shop.html
+++ b/Shop.html
@@ -168,14 +168,14 @@
   <div class="about-section">
     <h1>Shop</h1>
     </div>
-    <section class="Shop">
+ <!--    <section class="Shop">
 
 
-            <h2 class="title">Shop</h2>
+            <h2 class="title">Shop</h2> -->
 
    
 
-        <div class="content2">
+        <div class="content2"style="padding: 60px 0;" >
             <div class="card">
                 <div class="icon">
                     <a href="players.html" > <img src="img/football player.png" alt=""></a>
@@ -204,9 +204,9 @@
                 </div>
             </div>
         </div>
-        <div class="back">
+<!--         <div class="back">
             <a href="home.html" target="_blank" class="btn1">Back To Home</a>
-        </div>
+        </div> -->
     </section>
   <!-- - #FOOTER-->
 
