--- a/home.html
+++ b/home.html
@@ -40,15 +40,23 @@
       <!--logo in header (pc)  -->
       <a href="home.html" class="logo">
         <img src="assets/images/logo-light.png" width="150" height="24" alt="pass & shot home" class="logo-light">
-
+        <a href="home.html" class="logo">
+          <img src="img/Champions League ball.png" width="150" height="24" alt="pass & shot home" class="logo-light">
+  
         <img src="assets/images/logo-dark.png" width="150" height="24" alt="pass & shot home" class="logo-dark">
       </a>
+      <a href="home.html" class="logo">
+        <img src="img/Champions League ball.png" width="150" height="24" alt="pass & shot home" class="logo-dark">
+
 
       <nav class="navbar" data-navbar>
         <!-- logo for mobile in hamburger menu -->
         <div class="navbar-top">
           <a href="home.html" class="logo">
             <img src="assets/images/logo-light.png" width="74" height="24" alt="pass & shot home">
+          </a>
+          <a href="home.html" class="logo">
+            <img src="img/land_6890770.png" width="74" height="24" alt="pass & shot home">
           </a>
           <!-- x button -->
           <button class="nav-close-btn" aria-label="close menu" data-nav-toggler>
@@ -143,7 +151,7 @@
 
               <a href="login.html" class="btn btn-primary">login</a>
 
-              <a href="#" class="btn btn-outline">Contact Us</a>
+              <a href="contact-us.html" class="btn btn-outline">Contact Us</a>
 
             </div>
 
