--- a/aboutUs.html
+++ b/aboutUs.html
@@ -40,74 +40,64 @@
     <div class="container">
 
       <!--logo in header (pc)  -->
-      <a href="#" class="logo">
-        <img src="./assets/images/logo-light.png" width="150" height="24" alt="pass & shot home" class="logo-light">
-
-        <img src="./assets/images/logo-dark.png" width="150" height="24" alt="pass & shot home" class="logo-dark">
+      <a href="home.html" class="logo">
+        <img src="assets/images/logo-light.png" width="150" height="24" alt="pass & shot home" class="logo-light">
+        <img src="./ball.png" width="24" height="24" alt="ball" class="logo-ball">
+        <img src="assets/images/logo-dark.png" width="150" height="24" alt="pass & shot home" class="logo-dark">
       </a>
 
       <nav class="navbar" data-navbar>
         <!-- logo for mobile in hamburger menu -->
         <div class="navbar-top">
-          <a href="#" class="logo">
-            <img src="./assets/images/logo-light.png" width="74" height="24" alt="pass & shot home">
+          <a href="home.html" class="logo">
+            <img src="assets/images/logo-light.png" width="74" height="24" alt="pass & shot home">
           </a>
           <!-- x button -->
           <button class="nav-close-btn" aria-label="close menu" data-nav-toggler>
             <ion-icon name="close-outline" aria-hidden="true"></ion-icon>
           </button>
         </div>
-        <!--PAGES IN NAV-->
+        <!--NAV IN PAGES  -->
         <ul class="navbar-list">
-
           <li>
-            <a href="/" class="navbar-link">Home</a>
+            <a href="home.html" class="navbar-link">Home</a>
           </li>
-
           <li>
-            <a href="aboutUs.html" class="navbar-link">About</a>
+            <a href="aboutUs.html" class="navbar-link">About us</a>
           </li>
-
           <li>
             <a href="players.html" class="navbar-link">Players</a>
           </li>
-
           <li>
             <a href="coaches.html" class="navbar-link">coaches</a>
           </li>
-
           <li>
-            <a href="#" class="navbar-link">Contact</a>
+            <a href="contact-us.html" class="navbar-link">Contact</a>
           </li>
-
         </ul>
 
         <div class="wrapper">
-         <a href="mailto:any@email.com" class="contact-link">any@email.com</a>
+        <a href="mailto:any@email.com" class="contact-link">any@email.com</a>
 
           <a href="tel:010000000000000" class="contact-link">010000000000000</a>
         </div>
-
+        <!-- social madia in mobile hamburger menu -->
         <ul class="social-list">
-
           <li>
             <a href="#" class="social-link">
               <ion-icon name="logo-twitter"></ion-icon>
             </a>
           </li>
-
           <li>
             <a href="#" class="social-link">
               <ion-icon name="logo-facebook"></ion-icon>
             </a>
           </li>
-
           <li>
             <a href="#" class="social-link">
               <ion-icon name="logo-dribbble"></ion-icon>
             </a>
           </li>
-
           <li>
             <a href="#" class="social-link">
               <ion-icon name="logo-instagram"></ion-icon>
@@ -119,12 +109,11 @@
               <ion-icon name="logo-youtube"></ion-icon>
             </a>
           </li>
-
         </ul>
 
       </nav>
-
-      <a href="#" class="btn btn-primary">shop</a>
+        <!-- shop button -->
+      <a href="Shop.html" class="btn btn-primary">shop</a>
 
       <button class="nav-open-btn" aria-label="open menu" data-nav-toggler>
         <ion-icon name="menu-outline" aria-hidden="true"></ion-icon>
