--- a/contact-us.html
+++ b/contact-us.html
@@ -33,14 +33,13 @@
 <body>
 
   <!-- (#HEADER) -->
-
   <header class="header" data-header>
     <div class="container">
 
       <!--logo in header (pc)  -->
       <a href="home.html" class="logo">
         <img src="assets/images/logo-light.png" width="150" height="24" alt="pass & shot home" class="logo-light">
-
+        <img src="./ball.png" width="24" height="24" alt="ball" class="logo-ball">
         <img src="assets/images/logo-dark.png" width="150" height="24" alt="pass & shot home" class="logo-dark">
       </a>
 
@@ -70,12 +69,12 @@
             <a href="coaches.html" class="navbar-link">coaches</a>
           </li>
           <li>
-            <a href="#" class="navbar-link">Contact</a>
+            <a href="contact-us.html" class="navbar-link">Contact</a>
           </li>
         </ul>
 
         <div class="wrapper">
-         <a href="mailto:any@email.com" class="contact-link">any@email.com</a>
+        <a href="mailto:any@email.com" class="contact-link">any@email.com</a>
 
           <a href="tel:010000000000000" class="contact-link">010000000000000</a>
         </div>
@@ -110,7 +109,7 @@
         </ul>
 
       </nav>
-         <!-- shop button -->
+        <!-- shop button -->
       <a href="Shop.html" class="btn btn-primary">shop</a>
 
       <button class="nav-open-btn" aria-label="open menu" data-nav-toggler>
@@ -121,7 +120,6 @@
 
     </div>
   </header>
-
     <body>
         <div class="container">
             <div class="site-banner">
@@ -131,7 +129,8 @@
                  
                 </div>
                 <h1 class="heading">Contact Us</h1>
-            </div><div class="footer">
+            </div>
+            <div class="footer">
                 <div class="footer-column"><img class="map-image" src="assets/images/image.png" /></div>
                 <div class="footer-column">
                     <div class="tile-content">
