--- a/home.html
+++ b/home.html
@@ -40,7 +40,7 @@
       <!--logo in header (pc)  -->
       <a href="home.html" class="logo">
         <img src="assets/images/logo-light.png" width="150" height="24" alt="pass & shot home" class="logo-light">
-
+        <img src="./ball.png" width="24" height="24" alt="ball" class="logo-ball">
         <img src="assets/images/logo-dark.png" width="150" height="24" alt="pass & shot home" class="logo-dark">
       </a>
 
@@ -127,11 +127,13 @@
 
       <!-- (- #HERO & slider (frist section in home page) )-->
 
-      <section class="section hero has-bg-image" aria-label="home"
-        style="background-image: url('./assets/images/hero-bg.jpg')">
+      <section>
+        <Video src="./assets/images/videoplayback.mp4"  type="video/mp4" class="home-video" height="100%" loop muted autoplay ></Video>
+
         <div class="container">
 
-          <div class="hero-content">
+          <div class="hero-content" style="position: absolute;
+               top: 550px;">
             <!-- text image -->
             <h1 class="h1 hero-title"><img src="./assets/images/logo-light2.png" width="300" height="100" alt=""> </h1>
 
@@ -143,59 +145,11 @@
 
               <a href="login.html" class="btn btn-primary">login</a>
 
-              <a href="#" class="btn btn-outline">Contact Us</a>
+              <a href="contact-us.html" class="btn btn-outline">Contact Us</a>
 
             </div>
 
           </div>
-
-          <div class="hero-slider" data-slider>
-
-            <div class="slider-inner">
-              <ul class="slider-container" data-slider-container>
-                  <!--slider in hero section-->
-              </li>
-
-              <li class="slider-item">
-
-                <div class="hero-card">
-                  <figure class="img-holder" style="--width: 575; --height: 550;">
-                   <!-- video in slider(in hero ) -->
-                     <Video src="./assets/images/videoplayback.mp4"  type="video/mp4"  width="100%" height="100%" controls loop muted autoplay ></Video> 
-                  </figure>
-
-                </div>
-
-              </li>
-
-                <li class="slider-item">
-
-                  <figure class="img-holder" style="--width: 575; --height: 550;">
-                    <img src="./assets/images/hero-slide-1.jpg" width="575" height="550" alt="" class="img-cover">
-                  </figure>
-
-                
-                <li class="slider-item">
-
-                  <figure class="img-holder" style="--width: 575; --height: 550;">
-                    <img src="./assets/images/hero-slide-2.jpg" width="575" height="550" alt="" class="img-cover">
-                  </figure>
-
-                </li>
-
-              </ul>
-            </div>
-
-            <button class="slider-btn prev" aria-label="slide to previous" data-slider-prev>
-              <ion-icon name="arrow-back"></ion-icon>
-            </button>
-
-            <button class="slider-btn next" aria-label="slide to next" data-slider-next>
-              <ion-icon name="arrow-forward"></ion-icon>
-            </button>
-
-          </div>
-
         </div>
       </section>
 
