--- a/pedri.html
+++ b/pedri.html
@@ -70,14 +70,13 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 <!-- (#HEADER) -->
 
   <!-- (#HEADER) -->
-
-  <header class="header"   data-header>
+  <header class="header" data-header>
     <div class="container">
 
       <!--logo in header (pc)  -->
       <a href="home.html" class="logo">
         <img src="assets/images/logo-light.png" width="150" height="24" alt="pass & shot home" class="logo-light">
-
+        <img src="./ball.png" width="24" height="24" alt="ball" class="logo-ball">
         <img src="assets/images/logo-dark.png" width="150" height="24" alt="pass & shot home" class="logo-dark">
       </a>
 
@@ -107,12 +106,12 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <a href="coaches.html" class="navbar-link">coaches</a>
           </li>
           <li>
-            <a href="#" class="navbar-link">Contact</a>
+            <a href="contact-us.html" class="navbar-link">Contact</a>
           </li>
         </ul>
 
         <div class="wrapper">
-         <a href="mailto:any@email.com" class="contact-link">any@email.com</a>
+        <a href="mailto:any@email.com" class="contact-link">any@email.com</a>
 
           <a href="tel:010000000000000" class="contact-link">010000000000000</a>
         </div>
@@ -147,7 +146,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         </ul>
 
       </nav>
-         <!-- shop button -->
+        <!-- shop button -->
       <a href="Shop.html" class="btn btn-primary">shop</a>
 
       <button class="nav-open-btn" aria-label="open menu" data-nav-toggler>
@@ -158,7 +157,6 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
     </div>
   </header>
-         
 
 <!-- Page Container -->
 <div class="w3-content w3-margin-top" style="max-width:1400px;">
