Update case studies section with relevant titles and descriptions

--- a/index.html
+++ b/index.html
@@ -612,12 +612,11 @@
                 <div class="card-content">
 
                   <h3 class="h3">
-                    <a href="#" class="card-title">Ligula tristique quis risus</a>
+                    <a href="#" class="card-title">E-commerce Platform Development</a>
                   </h3>
 
                   <p class="card-text">
-                    Mauris convallis non ligula non interdum. Gravida vulputate convallis tempus vestibulum cras
-                    imperdiet nun eu dolor.
+                    Designed and developed a fully-functional e-commerce platform with intuitive UI and secure payment integration, optimized for high traffic.
                   </p>
 
                   <ul class="card-meta-list">
@@ -652,12 +651,11 @@
                 <div class="card-content">
 
                   <h3 class="h3">
-                    <a href="#" class="card-title">Nullam id dolor elit id nibh</a>
+                    <a href="#" class="card-title">Workspace Collaboration Tool</a>
                   </h3>
 
                   <p class="card-text">
-                    Mauris convallis non ligula non interdum. Gravida vulputate convallis tempus vestibulum cras
-                    imperdiet nun eu dolor.
+                    Developed a collaborative workspace tool that enables seamless communication, task management, and file sharing for teams working remotely.
                   </p>
 
                   <ul class="card-meta-list">
@@ -692,12 +690,11 @@
                 <div class="card-content">
 
                   <h3 class="h3">
-                    <a href="#" class="card-title">Ultricies fusce porta elit</a>
+                    <a href="#" class="card-title">Event Management Platform</a>
                   </h3>
 
                   <p class="card-text">
-                    Mauris convallis non ligula non interdum. Gravida vulputate convallis tempus vestibulum cras
-                    imperdiet nun eu dolor.
+                    Built a comprehensive event management platform with features like online registration, ticketing, and real-time event tracking for better user engagement.
                   </p>
 
                   <ul class="card-meta-list">
