Update feature section titles and content

--- a/index.html
+++ b/index.html
@@ -459,12 +459,11 @@
             <p class="section-subtitle" id="feautre-label">Our Solutions</p>
 
             <h2 class="h2 section-title">
-              We make your spending stress-free for you to have the perfect control.
+              Empowering Your Business with Our Tailored Solutions
             </h2>
 
             <p class="section-text">
-              Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras justo odio,
-              dapibus ac facilisis in, egestas eget quam. Praesent commodo cursus.
+              We provide innovative and efficient solutions to help businesses thrive in a competitive environment. Our focus is on streamlining your processes to ensure optimal results.
             </p>
 
             <ul class="feature-list">
@@ -477,7 +476,7 @@
                   </div>
 
                   <span class="span">
-                    Aenean quam ornare. Curabitur blandit.
+                    Customized strategies for every business need.
                   </span>
 
                 </div>
@@ -491,7 +490,7 @@
                   </div>
 
                   <span class="span">
-                    Nullam quis risus eget urna mollis ornare.
+                    Expert consulting and guidance for growth.
                   </span>
 
                 </div>
@@ -505,7 +504,7 @@
                   </div>
 
                   <span class="span">
-                    Etiam porta euismod malesuada mollis.
+                    Cutting-edge technology to enhance efficiency.
                   </span>
 
                 </div>
@@ -519,7 +518,7 @@
                   </div>
 
                   <span class="span">
-                    Vivamus sagittis lacus vel augue rutrum.
+                    Comprehensive support for seamless operations.
                   </span>
 
                 </div>
