Fixed card size and updated content for service section

--- a/index.html
+++ b/index.html
@@ -258,8 +258,7 @@
                 <h3 class="h4 card-title">24/7 Support</h3>
 
                 <p class="card-text">
-                  Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus cras
-                  justo.
+                  Our support team is available 24/7 to assist you with any issues, ensuring you're always taken care of.
                 </p>
 
                 <a href="#" class="btn-text">
@@ -281,8 +280,7 @@
                 <h3 class="h4 card-title">Secure Payments</h3>
 
                 <p class="card-text">
-                  Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus cras
-                  justo.
+                  We provide secure payment gateways to ensure safe and hassle-free transactions.
                 </p>
 
                 <a href="#" class="btn-text">
@@ -304,8 +302,7 @@
                 <h3 class="h4 card-title">Daily Updates</h3>
 
                 <p class="card-text">
-                  Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus cras
-                  justo.
+                  Receive daily updates with the latest news and trends, keeping you informed at all times.
                 </p>
 
                 <a href="#" class="btn-text">
@@ -327,8 +324,7 @@
                 <h3 class="h4 card-title">Market Research</h3>
 
                 <p class="card-text">
-                  Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus cras
-                  justo.
+                  Our market research helps you understand trends and customer behavior to stay ahead in the market.</p>
                 </p>
 
                 <a href="#" class="btn-text">
