--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <!-- 
     - primary meta tags
   -->
-  <title>Adex</title>
-  <meta name="title" content="Adex">
-  <meta name="description" content="This is a business agency html template made by codewithsadee">
+  <title>Digital Times</title>
+  <meta name="title" content="Digital Times">
+  <meta name="description" content="Empowering Digital Excellence">
 
   <!-- 
     - favicon
@@ -92,9 +92,9 @@
         </ul>
 
         <div class="wrapper">
-          <a href="mailto:info@email.com" class="contact-link">info@email.com</a>
+          <a href="mailto:info@email.com" class="contact-link">info@digitaltimess.com</a>
 
-          <a href="tel:001234567890" class="contact-link">00 (123) 456 78 90</a>
+          <a href="tel:+923001560966" class="contact-link">+92300-1560966</a>
         </div>
 
         <ul class="social-list">
@@ -133,7 +133,7 @@
 
       </nav>
 
-      <a href="#" class="btn btn-primary">Free Trial</a>
+      <a href="#" class="btn btn-primary">Contact Us</a>
 
       <button class="nav-open-btn" aria-label="open menu" data-nav-toggler>
         <ion-icon name="menu-outline" aria-hidden="true"></ion-icon>
@@ -814,16 +814,16 @@
 
         <li>
           <address class="footer-text">
-            Moonshine St. 14/05 Light City, London, United Kingdom
+            206 Al-Hafeez Executive Tower, Block 4, Gulberg III, Lahore, Pakistan
           </address>
         </li>
 
         <li>
-          <a href="mailto:info@email.com" class="footer-link">info@email.com</a>
+          <a href="mailto:info@email.com" class="footer-link">info@digitaltimess.com</a>
         </li>
 
         <li>
-          <a href="tel:001234567890" class="footer-link">00 (123) 456 78 90</a>
+          <a href="tel:001234567890" class="footer-link">923001560966</a>
         </li>
 
       </ul>
